[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/dialogs/SettingsDialog.gd" type="Script" id=1]

[sub_resource type="ButtonGroup" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="SettingsDialog" type="PopupDialog"]
margin_right = 480.0
margin_bottom = 479.0
input_pass_on_modal_close_click = false
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 479.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 55.0
text = "DIALOG_SETTINGS_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 480.0
margin_bottom = 79.0
custom_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 480.0
margin_bottom = 411.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_deadzone = 30

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 480.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ThemeContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
margin_right = 475.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer"]
margin_right = 475.0
margin_bottom = 38.0
theme_type_variation = "LabelSubtitle"
text = "SETTING_THEME"

[node name="Dark" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer"]
margin_top = 42.0
margin_right = 475.0
margin_bottom = 80.0
mouse_filter = 1
group = SubResource( 11 )
text = "Dark"

[node name="White" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer"]
margin_top = 84.0
margin_right = 475.0
margin_bottom = 122.0
mouse_filter = 1
group = SubResource( 11 )
text = "White"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
margin_top = 126.0
margin_right = 475.0
margin_bottom = 136.0
custom_constants/separation = 10

[node name="LangContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
unique_name_in_owner = true
margin_top = 140.0
margin_right = 475.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/SettingsContainer/LangContainer"]
margin_right = 475.0
margin_bottom = 38.0
theme_type_variation = "LabelSubtitle"
text = "SETTING_LANG"

[node name="Auto" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer/LangContainer"]
margin_top = 42.0
margin_right = 475.0
margin_bottom = 80.0
mouse_filter = 1
text = "SETTING_LANG_AUTO"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
margin_top = 224.0
margin_right = 475.0
margin_bottom = 234.0
custom_constants/separation = 10

[node name="TutorialContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
margin_top = 238.0
margin_right = 475.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 50 )

[node name="ShowTutorial" type="Button" parent="VBoxContainer/ScrollContainer/SettingsContainer/TutorialContainer"]
margin_right = 406.0
margin_bottom = 50.0
mouse_filter = 1
text = "DIALOG_SETTINGS_BTN_TUTORIAL"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
margin_top = 292.0
margin_right = 475.0
margin_bottom = 292.0
size_flags_vertical = 3

[node name="LabelVersion" type="Label" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
margin_top = 296.0
margin_right = 475.0
margin_bottom = 334.0
theme_type_variation = "LabelSubtitle"
text = "v1.x.x"
align = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 415.0
margin_right = 480.0
margin_bottom = 425.0
custom_constants/separation = 10
custom_styles/separator = SubResource( 12 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 429.0
margin_right = 480.0
margin_bottom = 479.0
alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_right = 312.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 50 )
text = "BTN_CLOSE"

[connection signal="toggled" from="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer/Dark" to="." method="_on_theme_chosen" binds= [ "dark" ]]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer/White" to="." method="_on_theme_chosen" binds= [ "white" ]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/SettingsContainer/TutorialContainer/ShowTutorial" to="." method="_on_ShowTutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CloseButton" to="." method="_on_CloseButton_pressed"]
